# coloredcurves4yolo

./: .gitignore  README.md  coloredcurves4yolo.py  dataset.yaml  pyproject.toml  requirements.txt
src/coloredcurves4yolo/: __init__.py  cli.py  core.py
